# souvlaki

./: Cargo.toml  README.md
examples/: print_events.rs
src/platform/macos/: mod.rs
src/platform/mpris/: zbus.rs
src/platform/mpris/dbus/: controls.rs  interfaces.rs
src/platform/windows/: mod.rs
